--- a/weatherapi.css
+++ b/weatherapi.css
@@ -3,11 +3,51 @@ html{
 
 }
 body{
-    color:whitesmoke;
-    text-align: inherit;
-     
+  background-color: aquamarine;
+  color:whitesmoke;
+  text-align: inherit;
+  height: 4em;
+  padding-top: 2em;
+  background-color: grey;
+  border-top: 3px;
+  border-bottom: 3px;
+  margin-top: 1.0em;
+    
+}
+h1{
+    color: sienna;
+}
+h2{
+    color: sienna;
+
+}
+
+.static-info, form, p{
+margin-top: auto;
+margin-right: auto;
+margin-bottom: auto;
+margin-left:5em;
 }
 .weatherZone{
-    color:coral;
-    
+color:coral;
+margin-right: 5.0em;
+margin-left: 5.0em;
+}
+
+.style {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
+  z-index: -100;
+}
+
+.style {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
